--- a/styles.css
+++ b/styles.css
@@ -162,7 +162,7 @@ main {
     font-size: 28px;
     color: #333;
     margin-bottom: 20px;
-    text-align: left;
+    text-align: center;
 }
 
 /* Portfolio Container */
