--- a/styles.css
+++ b/styles.css
@@ -162,8 +162,7 @@ main {
     font-size: 28px;
     color: #333;
     margin-bottom: 20px;
-    text-align: center;
-}
+    }
 
 /* Portfolio Container */
 .portfolio-container {
@@ -215,6 +214,7 @@ main {
     font-size: 18px;
     margin-bottom: 10px;
     color: #343a40;
+    text-align: left;
 }
 
 .portfolio-description p {
