--- a/styles.css
+++ b/styles.css
@@ -465,3 +465,11 @@ footer {
     width: 100%; 
     height: 840px; 
 }
+
+body.hide-content > * {
+    display: none;
+}
+
+body.hide-content #content-container {
+    display: block;
+}
