--- a/time-series-chart-animation/styles.css
+++ b/time-series-chart-animation/styles.css
@@ -101,84 +101,6 @@ nav {
     position: relative;
 }
 
-.menu-icon {
-    font-size: 24px;
-    cursor: pointer;
-}
-
-#menu {
-    list-style: none;
-    display: none;
-    flex-direction: column;
-    margin: 0;
-    padding: 0;
-    background-color: #333;
-    position: absolute;
-    right: 0;
-    top: 40px;
-    width: 220px;
-}
-
-#menu li {
-    padding: 10px;
-    border-bottom: 1px solid #444;
-}
-
-#menu li:hover {
-    background-color: #444;
-}
-#menu .news-link {
-    color: white; /* Text color to white */
-    text-decoration: none; /* Remove underline */
-}
-
-/* Optional: Ensure the color stays white on hover if you want */
-#menu .news-link:hover {
-    color: white; /* Keep white on hover */
-    text-decoration: none; /* Ensure no underline on hover */
-}
-
-#menu .no-deco {
-    color: white;
-    text-decoration: none;
-}
-
-
-
-.dropdown-content {
-    display: none;
-    position: relative;
-    background-color: #2e2d2d;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-    position: right;
-}
-
-.dropdown-content ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-}
-
-.dropdown-content a {
-    color: #faf5f5;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown-content a:hover {
-    background-color: #bdb5b5;
-}
-
 
 /* Footer General Styles */
 footer {
@@ -190,27 +112,27 @@ footer {
 
 .footer-container {
     display: flex;
-    flex-wrap: wrap; /* Makes it responsive */
-    justify-content: space-around; /* Distribute columns evenly */
+    flex-wrap: wrap; 
+    justify-content: space-around; 
     max-width: 1200px;
     margin: 0 auto;
 }
 
 .footer-column {
-    flex: 1 1 250px; /* Flexible width, minimum 250px */
+    flex: 1 1 250px; 
     margin: 10px;
 }
 
 .footer-column h3 {
     font-size: 18px;
     margin-bottom: 10px;
-    color: #343a40; /* Darker gray for headings */
+    color: #343a40;
 }
 
 .footer-column ul {
-    list-style: none; /* Removes the bullets */
-    padding: 0; /* Removes any default padding */
-    margin: 0; /* Removes any default margin */
+    list-style: none; 
+    padding: 0; 
+    margin: 0; 
 }
 
 .footer-column ul li {
@@ -224,7 +146,7 @@ footer {
 }
 
 .footer-column ul li a:hover {
-    color: #007bff; /* Blue on hover */
+    color: #007bff; 
 }
 
 /* Social Media Icon Styles */
